--- a/paper/algorithms.tex
+++ b/paper/algorithms.tex
@@ -62,7 +62,6 @@ flag.  If we reach a leaf node, and it does not contain our search
 value, then we return falseto indicate the value does not exist in the
 tree.
 
-% checked up to here
 Implementing insertion into the trees was where things became a bit
 complicated.  Specifically having to handle overflow and node
 splitting.  The insertion mothed for B trees starts out fairly simple,
@@ -72,71 +71,73 @@ us the node that the value should be inserted into.  We then do a
 brute force insert into the node, temporarily ignoring order, just to
 get the nodes values sorted.  Once we have the value inserted, we
 check if the node is now overflowing or not, if not we are done and
-end the function.  If we do encounter over flow then we quickly
+end the function.  If we do encounter overflow then we quickly
 calculate the median value and partition the values into two separate
 sets around the median, but neither including the median value.  We
 then pass the two sets of values, the median value, the index of the
-median value, and the current node to out insertUp method to handle
-the spliting of the node.  The insertUp method recieves these values
-and that check to see if the current node is the root node or not.  If
-we are splitting the root node then the split is easy enough to
-accomplish.  We create two new nodes that will become the children to
-the root, and each inherit half the children of the previous root.  We
-want to keep the root of the tree at index 0 in the array of all nodes
-in the tree for convenience, which is why the new nodes created are
-the children to our new root, and not one of the children and the new
-root node.  We assign the appropriate values and children to the new
-nodes, and set them to look at the root node as their parent, we then
-assign the the new root the median value from the split node, and set
-its children to include the new children nodes we have created.
+median value, and the current node to out \texttt{insertUp} method to
+handle the spliting of the node.  The \texttt{insertUp} method
+recieves these values and that check to see if the current node is the
+root node or not.  If we are splitting the root node then the split is
+easy enough to accomplish.  We create two new nodes that will become
+the children to the root, and each inherit half the children of the
+previous root.  We want to keep the root of the tree at index 0 in the
+array of all nodes in the tree for convenience, which is why the new
+nodes created are the children to our new root, and not one of the
+children and the new root node.  We assign the appropriate values and
+children to the new nodes, and set them to look at the root node as
+their parent, we then assign the the new root the median value from
+the split node, and set its children to include the new children nodes
+we have created.
 
 If the node to be split was instead a leaf or internal node then the
 method of splitting is slightly different.  In this case we are only
 creating one new node to the tree, all the appropriate values and
 children, if any exist, are split between the original node we are
 splitting and the new node we are creating to take in half the values,
-and possible half the children.  We then recursively call the insertUp
-method to insert the median value into the split node's parent.  The
-function will recurse until either no node needs to be split, or we've
-split the root node.
+and possible half the children.  We then recursively call the
+\texttt{insertUp} method to insert the median value into the split
+node's parent.  The function will recurse until either no node needs
+to be split, or we've split the root node.
 
 Insertion for B+ trees in almost identical, except it has to handle an
 extra specific case that B trees do not deal with.  Splitting internal
 nodes and the root node function identically, but B+ trees behave
 differently than B trees when splitting leaf nodes, and so an extra
-method to handle this case called bp\_leaf\_split is implemented.
-When splitting a leaf node, it is similar to splitting an internal
-node, with slight changes.  When splitting a leaf node, we split the
-node down the middle, but do not separate out the median value to be
-inserted up into the parent node.  Instead, we select the smallest
-value from the right side of the split node and insert that as a key
-into the parent node, this being because all values are stored at the
-leaf level in B+ trees.  After splitting a leaf node we then call the
-B+ tree's insertUp method to handle insertion of the new key and
-potential splitting of the parent node.
+method to handle this case called \texttt{bp\_leaf\_split} is
+implemented.  When splitting a leaf node, it is similar to splitting
+an internal node, with slight changes.  When splitting a leaf node, we
+split the node down the middle, but do not separate out the median
+value to be inserted up into the parent node.  Instead, we select the
+smallest value from the right side of the split node and insert that
+as a key into the parent node, this being because all values are
+stored at the leaf level in B+ trees.  After splitting a leaf node we
+then call the B+ tree's insertUp method to handle insertion of the new
+key and potential splitting of the parent node.
 
 After some tweaking and discussion about our implementation for
-deletion in both B and B+ trees was changed from our original intended
-method in exchange for a more streamlined, though more costly method.
-In investigating methods for implementing deletion from B and B+ trees
-we found there to be two popular methods of accomplishing this task.
-The first is the most obvious, but also the more complex of the two to
-implement.  It consists of search for the value in the tree, removing
-it from where it lies, and then if the node should underflow, borrow
-from or merge with sibling nodes, and if need be change keys in parent
-nodes, which could then result in underflow propagating upward in the
-tree, which in turn would need to be handled.  The other method
-suggested passing through the tree and restructuring it such that no
-underflow would occur when the value is removed.  We had originally
-intended to implement the first method, but found that in development
-that the way we had things structured made it mush easier to implement
-the second method.  Our implementation of this method was fairly
-straight forward.  We search for the value to be deleted, if we find
-it and no underflow will occur, we remove it and are done.  If
-underflow does occur, then utilizing the tree's master list of values
-in the tree, we reconstruct the tree from these values, less the
-deleted value.  Our implementation run approximately in time O(n log
-n), but for small n the effect on performance in negligible.
+deletion in both B and B+ trees, we made the decision to change from
+our original intended method in exchange for a more streamlined,
+though more costly method.  In investigating methods for implementing
+deletion from B and B+ trees we found there to be two popular methods
+of accomplishing this task.  The first is the most obvious, but also
+the more complex of the two to implement.  It consists of search for
+the value in the tree, removing it from where it lies, and then if the
+node should underflow, borrow from or merge with sibling nodes, and if
+need be change keys in parent nodes, which could then result in
+underflow propagating upward in the tree, which in turn would need to
+be handled.  The other method suggested passing through the tree and
+restructuring it such that no underflow would occur when the value is
+removed.  We had originally intended to implement the first method,
+but found that in development that the way we had things structured
+made it mush easier to implement the second method.  Our
+implementation of this method was fairly straight forward. First, we search
+for the value to be deleted. If we find it and no underflow will
+occur, we remove it and are done.  If underflow does occur, then
+utilizing the tree's master list of values in the tree, we reconstruct
+the tree from these values, less the deleted value.  Our
+implementation run approximately in time O(n log n), but for small n
+the effect on performance in negligible.
 
 \subsection{Graph Layout Algorithms}
 The UI portion of this project requires a sizable amount of
