change order n log n to equation notation

--- a/paper/algorithms.tex
+++ b/paper/algorithms.tex
@@ -136,7 +136,7 @@ for the value to be deleted. If we find it and no underflow will
 occur, we remove it and are done.  If underflow does occur, then
 utilizing the tree's master list of values in the tree, we reconstruct
 the tree from these values, less the deleted value.  Our
-implementation run approximately in time O(n log n), but for small n
+implementation run approximately in time $O(n \text{\,log\,} n)$, but for small n
 the effect on performance in negligible.
 
 \subsection{Graph Layout Algorithms}
